--- a/components/header.module.css
+++ b/components/header.module.css
@@ -5,6 +5,8 @@
   position: sticky;
   top: 0;
   z-index: 100;
+  /* Status bar do iOS (viewport-fit=cover + black-translucent) */
+  padding-top: env(safe-area-inset-top, 0px);
 }
 
 .nav {
